<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DicasPet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alt_logomarca_do_dicaspet">LogoMarca do DicasPet</string>
    <string name="hint_digite_seu_e_mail">Digite seu e-mail</string>
    <string name="hint_digite_sua_senha">Digite sua senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="nome_user">Mary da Silva</string>
    <string name="email_user">mary@celtic.com.br</string>
    <string name="meus_pets">Meus Pets</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="reproducao_animal">Reprodução Animal</string>
    <string name="servicos">Serviço</string>
    <string name="consulta_peso_ideal">Consulta do Peso Ideal</string>
    <string name="hint_consulta_peso_ideal">Digite o Peso do Cachorro</string>
    <string name="porte">Selecione o Porte do Animal:</string>
    <string name="pequeno">Pequeno</string>
    <string name="medio">Médio</string>
    <string name="grande">Grande</string>
    <string name="sexo">Sexo:</string>
    <string name="macho">Macho</string>
    <string name="femea">Fêmea</string>
    <string name="calcular">Calcular Peso</string>
    <string name="nome_pet">Nome</string>
    <string name="especie">Especie</string>
    <string name="raca">Raça</string>
    <string name="porte_ani">Porte</string>
    <string name="peso">Peso</string>
    <string name="idade">Idade</string>
    <string name="sobre">Sobre</string>
    <string name="perfil_pet">Perfil do Pet</string>
    <string name="empresa">Desenvolvido por: ©Celtic Solutions</string>
    <string name="email">contato@dicaspet.com.br</string>
    <string name="txt_ultimas">Últimas perguntas</string>
    <string name="fotoperfildousuario">fotoperfildousuario</string>
    <string name="seja_bem_vindo_a_ao_dicaspet">Seja bem vindo(a) ao Dicaspet</string>
    <string name="como_dar_banho_no_meu_c_o_">Como dar banho no meu cão?</string>
    <string name="logout">Logout</string>
    <string name="lista_pets">Lista dos Pets</string>
	<string name="pesquisar">Buscar</string>    
	<string name="pontuacao">Pontuação Atual:</string>
</resources>

