<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|always"
        android:title="@string/pesquisar"/>
    <item
        android:id="@+id/item_pets"
        android:icon="@drawable/ic_cachorro"
        android:showAsAction="ifRoom|withText"
        android:title="@string/meus_pets"/>
    <item
        android:id="@+id/item_peso"
        android:showAsAction="ifRoom|withText"
        android:title="@string/peso_ideal"/>
    <item
        android:id="@+id/item_reproducao"
        android:showAsAction="ifRoom"
        android:title="@string/reproducao_animal"/>
    <item
        android:id="@+id/item_servicos"
        android:showAsAction="ifRoom"
        android:title="@string/servicos"/>
    <item
        android:id="@+id/item_sobre"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom|withText"
        android:title="@string/sobre"/>
     <item
        android:id="@+id/item_logout"
        android:icon="@android:drawable/ic_secure"
        android:showAsAction="ifRoom|withText"
        android:title="@string/logout"/>

</menu>