<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewBemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#B4F796"
        android:padding="2dp"
        android:text="@string/seja_bem_vindo_a_ao_dicaspet"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/homeListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_background" >

    </ListView>

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/nome_user" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNome"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/email_user" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewBemVindo"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/fotoperfildousuario"
        android:src="@drawable/user_foto" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:background="#B4F796"
        android:padding="2dp"
        android:text="@string/txt_ultimas"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNome"
        android:layout_alignTop="@+id/imageView1"
        android:text="@string/pontuacao" />

    <TextView
        android:id="@+id/textViewPontuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="false"
        android:layout_toRightOf="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>