<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4F796" >

    <EditText
        android:id="@+id/editMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="27dp"
        android:background="#ffffff"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hint_digite_seu_e_mail"
        android:inputType="text"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    
    <EditText
        android:id="@+id/editSenhaMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editMail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/hint_digite_sua_senha"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editSenhaMail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:padding="5dp"
        android:text="@string/btn_entrar"
        android:textColor="#ffffff"
        android:background="#37980C" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/alt_logomarca_do_dicaspet"
        android:src="@drawable/logodicaspet_transp" />

</RelativeLayout>